--- a/src/components/FormAnimal/FormAnimal.css
+++ b/src/components/FormAnimal/FormAnimal.css
@@ -1,20 +1,38 @@
+form {
+    display: flex;
+    flex-direction: column;
+
+    width: 75%;
+    margin: 2.5% auto;
+}
+
 input {
     background-color: white;
     color: black;
-    width: 400px;
+    width: 50%;
 }
 
-select, button {
-    width: 400px;
+select {
+    width: 50%;
+    background-color: black;
+    color: white;
 }
 
-.cadastro{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 3%;
+form button {
+    width: 50%;
+    margin: 1% auto;
 }
 
-.caracteristica{
-    margin: 5px;
+label {
+    margin-top: 1%;
 }
+
+h2 {
+    margin-top: 2%!important;
+}
+
+.form-cadastro button{
+    background-color: #000;
+    color: white;
+}
+
