--- a/src/components/CardAnimal/CardAnimal.css
+++ b/src/components/CardAnimal/CardAnimal.css
@@ -1,24 +1,40 @@
-.ctn-cardanimal {
-    width: 30%;
+.card-animal {
+    width: 18%;
     height: 60vh;
-    background-color: #A7A000;
+
+    margin: 2% 2%;
+
+    background-color: #a8a67a;
+
     border: 2px solid #555;
+    border-radius: 10px;
+
     font-family: "Caesar Dressing", system-ui;
 }
 
-.ctn-cardanimal > p {
-    font-size: 2em;
+.card-animal p {
+    font-size: 1.5rem;
 }
 
-.card-animal > img{
-    width: 50%;
-    height: 50%;
+.card-animal img {
+    width: 150px;
+    height: 150px;
+    margin: 2% 0;
+    border-radius: 10px;
 }
 
-/*css/Renato
-    .ctn-animais {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-}*/
+.card-animal:hover {
+    transform: scale(1.1);
+    transition: 0.5s;
+}
+
+p {
+    font-size: 1.5rem;
+    text-align: left;
+    padding-left: 5%;
+}
+
+b {
+    font-size: 1.5rem;
+    text-decoration: underline;
+}
